--- a/8/index.html
+++ b/8/index.html
@@ -8,119 +8,121 @@
     <base href="https://htmlacademy-adaptive.github.io/813413-sedona-21/8/">
 </head>
   <body class="page__body">
-    <header class="page-header">
-      <nav class="main-nav">
-        <div class="main-nav__wrapper">
-          <ul class="main-nav__list">
-            <li class="main-nav__item">
-              <a class="main-nav__link main-nav__link--size-a" href="#"><span>Главная</span></a>
-            </li>
-            <li class="main-nav__item">
-              <a class="main-nav__link main-nav__link--size-b" href="catalog.html"><span>Фото и видео</span></a>
-            </li>
-            <li class="main-nav__item">
-              <a class="main-nav__link main-nav__link--size-c" href="form.html"><span>Форма отзыва</span></a>
-            </li>
-            <li class="main-nav__item">
-              <a class="main-nav__link main-nav__link--size-d" href="https://htmlacademy.ru/"><span>Html Academy</span></a>
-            </li>
-            <li class="main-nav__item main-nav__item--logo">
-              <a class="main-nav__link-logo" href="#"></a>
-            </li>
-            <button class="main-nav__toggle" type="button"><span class="visually-hidden">Меню</span></button>
-          </ul>
-        </div>
-      </nav>
-    </header>
-    <main class="page-main">
-      <section class="intro">
-        <div class="intro__title">
-          <h1 class="visually-hidden">СЕДОНА</h1>
-        </div>
-      </section>
-      <section class="description">
-        <h2 class="description__title">СЕДОНА — небольшой
-          городок в АРИЗОНЕ,
-          заслуживающий большего!</h2>
-        <p class="description__text">Рассмотрим 5 причин, по которым
-          Седона круче, чем гранд каньон!</p>
-      </section>
-      <section class="town">
-        <div class="color-card">
-          <h2 class="color-card__title">Настоящий городок</h2>
-          <p class="color-card__number">—№1—</p>
-          <p class="color-card__text">Седона не аттракцион для туристов, там течет своя жизнь</p>
-        </div>
-        <div class="town__img-container">
-          <img class="town__img" src="img/main/city.jpg" width="320" height="260" alt="Фото города">
-        </div>
-        <div class="town__container">
-          <div class="town__housing">
-            <h3 class="town__title">Жилье</h3>
-            <p class="town__text">Рекомендуем пожить в
-              настоящем мотеле, все как в кино!</p>
+    <div class="page__container">
+      <header class="page-header">
+        <nav class="main-nav">
+          <div class="main-nav__wrapper">
+            <ul class="main-nav__list">
+              <li class="main-nav__item">
+                <a class="main-nav__link main-nav__link--size-a" href="#"><span>Главная</span></a>
+              </li>
+              <li class="main-nav__item">
+                <a class="main-nav__link main-nav__link--size-b" href="catalog.html"><span>Фото и видео</span></a>
+              </li>
+              <li class="main-nav__item">
+                <a class="main-nav__link main-nav__link--size-c" href="form.html"><span>Форма отзыва</span></a>
+              </li>
+              <li class="main-nav__item">
+                <a class="main-nav__link main-nav__link--size-d" href="https://htmlacademy.ru/"><span>Html Academy</span></a>
+              </li>
+              <li class="main-nav__item main-nav__item--logo">
+                <a class="main-nav__link-logo" href="#"></a>
+              </li>
+              <button class="main-nav__toggle" type="button"><span class="visually-hidden">Меню</span></button>
+            </ul>
           </div>
-          <div class="town__souvenirs">
-            <h3 class="town__title">Сувениры</h3>
-            <p class="town__text">Не только китайского, но и
-            метсного производства!</p>
+        </nav>
+      </header>
+      <main class="page-main">
+        <section class="intro">
+          <div class="intro__title">
+            <h1 class="visually-hidden">СЕДОНА</h1>
           </div>
-          <div class="town__food">
-            <h3 class="town__title">Еда</h3>
-            <p class="town__text">Всегда заказывайте
-            фирменный бургер, вы не
-            разочаруетесь!</p>
+        </section>
+        <section class="description">
+          <h2 class="description__title">СЕДОНА — небольшой
+            городок в АРИЗОНЕ,
+            заслуживающий большего!</h2>
+          <p class="description__text">Рассмотрим 5 причин, по которым
+            Седона круче, чем гранд каньон!</p>
+        </section>
+        <section class="town">
+          <div class="color-card">
+            <h2 class="color-card__title">Настоящий городок</h2>
+            <p class="color-card__number">—№1—</p>
+            <p class="color-card__text">Седона не аттракцион для туристов, там течет своя жизнь</p>
           </div>
-        </div>
-      </section>
-      <section class="features">
-        <div class="color-card color-card--position">
-          <h2 class="color-card__title">Там есть мост дьявола</h2>
-          <p class="color-card__number">—№2—</p>
-          <p class="color-card__text color-card__desktop-text">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-        </div>
-        <div class="features__container">
-          <img class="features__img" src="img/main/bridge.png" width="320" height="260" alt="Фото каньона">
-        </div>
-        <div class="features__block">
-          <h2 class="features__title">Небольшая площадь</h2>
-          <p class="features__number">—№3—</p>
-          <p class="features__text">Все интересные места находятся очень близко</p>
-        </div>
-        <div class="features__block">
-          <h2 class="features__title">Красивая дорога</h2>
-          <p class="features__number">—№4—</p>
-          <p class="features__text features__text-width">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-        </div>
-        <div class="features__block">
-          <h2 class="features__title">Мало туристов</h2>
-          <p class="features__number">—№5—</p>
-          <p class="features__text">Большинство едет в Гранд каньон и толпится там</p>
-        </div>
-      </section>
-      <section class="interesting">
-        <div class="interesting__container">
-          <h2 class="interesting__title">Заинтересовались?</h2>
-          <p class="interesting__text">Укажите предпологаемые даты
-            поездки, и мы покажем вам лучшие
-            предложения гостиниц в Седоне</p>
-          <a class="interesting__search" href="#">Найти гостиницу</a>
-        </div>
-        <div class="interesting__map-container">
-          <img class="interesting__map" src="img/main/map-mobile.jpg" height="350" width="320" alt="Карта">
-        </div>
-      </section>
-    </main>
-    <footer class="page-footer">
-      <section class="social">
-        <h2 class="social__title">#visitsedona</h2>
-        <div class="social__links">
-          <a class="social__item" href="#"><span class="visually-hidden">twitter</span></a>
-          <a class="social__item" href="#"><span class="visually-hidden">facebook</span></a>
-          <a class="social__item" href="#"><span class="visually-hidden">youtube</span></a>
-        </div>
-        <a class="social__dev" href="#">Разработано</a>
-      </section>
-    </footer>
+          <div class="town__img-container">
+            <img class="town__img" src="img/main/city.jpg" width="320" height="260" alt="Фото города">
+          </div>
+          <div class="town__container">
+            <div class="town__housing">
+              <h3 class="town__title">Жилье</h3>
+              <p class="town__text">Рекомендуем пожить в
+                настоящем мотеле, все как в кино!</p>
+            </div>
+            <div class="town__souvenirs">
+              <h3 class="town__title">Сувениры</h3>
+              <p class="town__text">Не только китайского, но и
+              метсного производства!</p>
+            </div>
+            <div class="town__food">
+              <h3 class="town__title">Еда</h3>
+              <p class="town__text">Всегда заказывайте
+              фирменный бургер, вы не
+              разочаруетесь!</p>
+            </div>
+          </div>
+        </section>
+        <section class="features">
+          <div class="color-card color-card--position">
+            <h2 class="color-card__title">Там есть мост дьявола</h2>
+            <p class="color-card__number">—№2—</p>
+            <p class="color-card__text color-card__desktop-text">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+          </div>
+          <div class="features__container">
+            <img class="features__img" src="img/main/bridge.png" width="320" height="260" alt="Фото каньона">
+          </div>
+          <div class="features__block">
+            <h2 class="features__title">Небольшая площадь</h2>
+            <p class="features__number">—№3—</p>
+            <p class="features__text">Все интересные места находятся очень близко</p>
+          </div>
+          <div class="features__block">
+            <h2 class="features__title">Красивая дорога</h2>
+            <p class="features__number">—№4—</p>
+            <p class="features__text features__text-width">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </div>
+          <div class="features__block">
+            <h2 class="features__title">Мало туристов</h2>
+            <p class="features__number">—№5—</p>
+            <p class="features__text">Большинство едет в Гранд каньон и толпится там</p>
+          </div>
+        </section>
+        <section class="interesting">
+          <div class="interesting__container">
+            <h2 class="interesting__title">Заинтересовались?</h2>
+            <p class="interesting__text">Укажите предпологаемые даты
+              поездки, и мы покажем вам лучшие
+              предложения гостиниц в Седоне</p>
+            <a class="interesting__search" href="#">Найти гостиницу</a>
+          </div>
+          <div class="interesting__map-container">
+            <img class="interesting__map" src="img/main/map-mobile.jpg" height="350" width="320" alt="Карта">
+          </div>
+        </section>
+      </main>
+      <footer class="page-footer">
+        <section class="social">
+          <h2 class="social__title">#visitsedona</h2>
+          <div class="social__links">
+            <a class="social__item" href="#"><span class="visually-hidden">twitter</span></a>
+            <a class="social__item" href="#"><span class="visually-hidden">facebook</span></a>
+            <a class="social__item" href="#"><span class="visually-hidden">youtube</span></a>
+          </div>
+          <a class="social__dev" href="#">Разработано</a>
+        </section>
+      </footer>
+    </div>
   </body>
 </html>
