--- a/source/index.html
+++ b/source/index.html
@@ -47,9 +47,11 @@
         </section>
         <section class="town">
           <div class="color-card">
-            <h2 class="color-card__title">Настоящий городок</h2>
-            <p class="color-card__number">—№1—</p>
-            <p class="color-card__text">Седона не аттракцион для туристов, там течет своя жизнь</p>
+            <div class="color-card__container color-card__container-deg">
+              <h2 class="color-card__title">Настоящий городок</h2>
+              <p class="color-card__number">—№1—</p>
+              <p class="color-card__text">Седона не аттракцион для туристов, там течет своя жизнь</p>
+            </div>
           </div>
           <div class="town__img-container">
             <img class="town__img" src="img/main/city.jpg" width="320" height="260" alt="Фото города">
@@ -67,35 +69,43 @@
             </div>
             <div class="town__food">
               <h3 class="town__title">Еда</h3>
-              <p class="town__text">Всегда заказывайте
+              <p class="town__text town__text-mobile">Всегда заказывайте
               фирменный бургер, вы не
               разочаруетесь!</p>
             </div>
           </div>
         </section>
         <section class="features">
-          <div class="color-card color-card--position">
-            <h2 class="color-card__title">Там есть мост дьявола</h2>
-            <p class="color-card__number">—№2—</p>
-            <p class="color-card__text color-card__desktop-text">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+          <div class="color-card">
+            <div class="color-card__container color-card__container-fix">
+              <h2 class="color-card__title">Там есть мост дьявола</h2>
+              <p class="color-card__number">—№2—</p>
+              <p class="color-card__text color-card__desktop-text">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+            </div>
           </div>
           <div class="features__container">
             <img class="features__img" src="img/main/bridge.png" width="320" height="260" alt="Фото каньона">
           </div>
           <div class="features__block">
-            <h2 class="features__title">Небольшая площадь</h2>
-            <p class="features__number">—№3—</p>
-            <p class="features__text">Все интересные места находятся очень близко</p>
+            <div class="features__block-container">
+              <h2 class="features__title">Небольшая площадь</h2>
+              <p class="features__number">—№3—</p>
+              <p class="features__text features__text-width">Все интересные места находятся очень близко</p>
+            </div>
           </div>
-          <div class="features__block">
-            <h2 class="features__title">Красивая дорога</h2>
-            <p class="features__number">—№4—</p>
-            <p class="features__text features__text-width">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          <div class="features__block features__block-border">
+            <div class="features__block-container">
+              <h2 class="features__title">Красивая дорога</h2>
+              <p class="features__number">—№4—</p>
+              <p class="features__text features__text-width">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            </div>
           </div>
-          <div class="features__block">
-            <h2 class="features__title">Мало туристов</h2>
-            <p class="features__number">—№5—</p>
-            <p class="features__text">Большинство едет в Гранд каньон и толпится там</p>
+          <div class="features__block features__block-border">
+            <div class="features__block-container">
+              <h2 class="features__title">Мало туристов</h2>
+              <p class="features__number">—№5—</p>
+              <p class="features__text features__text-width">Большинство едет в Гранд каньон и толпится там</p>
+            </div>
           </div>
         </section>
         <section class="interesting">
